Chromedriver updates and fixes

--- a/TPMTimesheetAutomation.ipynb
+++ b/TPMTimesheetAutomation.ipynb
@@ -129,7 +129,7 @@
    "source": [
     "time = driver.find_elements_by_class_name('input5')[0]\n",
     "\n",
-    "# Shitty way of changing the entire chunk of values\n",
+    "# Changing values to 8 hours\n",
     "driver.execute_script(\"document.getElementById('HoursMon1').setAttribute('value', '8')\")\n",
     "driver.execute_script(\"document.getElementById('HoursTue1').setAttribute('value', '8')\")\n",
     "driver.execute_script(\"document.getElementById('HoursWed1').setAttribute('value', '8')\")\n",
@@ -139,6 +139,13 @@
     "# Submit\n",
     "#driver.execute_script(\"document.getElementById('HoursFri1').setAttribute('value', '8')\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
