--- a/TPMTimesheetAutomation.ipynb
+++ b/TPMTimesheetAutomation.ipynb
@@ -22,6 +22,7 @@
    "source": [
     "# Access the chrome webdriver and open the browser to the microsoft login page\n",
     "# Note: Chrome instance DOES know it is being automated\n",
+    "# Note: May need to run 'xattr -d com.apple.quarantine chromedriver'\n",
     "driver = webdriver.Chrome('./chromedriver')\n",
     "driver.get(\"https://timesheet.amsoftware.com/EApplications/esecurity/Login.jsp\")"
    ]
@@ -30,7 +31,16 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your username: 030497\n",
+      "Enter your password: ········\n"
+     ]
+    }
+   ],
    "source": [
     "# Attempt to gather the username and password from a file\n",
     "if os.path.exists(\"creds.dat\"):\n",
@@ -164,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
